fix(stryker shirt image): fix "stryker shirt image" max-width, so it doesn't break the responsive design on mobile browsers.
Using the usual workflow.

--- a/stylesheets/stryker.css
+++ b/stylesheets/stryker.css
@@ -45,7 +45,7 @@ pre{
     padding: 0;
     text-align: left;
 }
-#stryker-shirt-image {
+#stryker-shirt-image img {
     max-width: 100%;
     width: auto;
     height: auto;
